# dotnet9-cppinterop

./: Makefile  README.md  install_deps.sh  install_dotnet9.sh
.github/workflows/: ci.yml
src/: .dockerignore  .gitignore  Dockerfile  docker_run.sh
src/CppLibrary/: CMakeLists.txt  build.sh  reverse_string.cpp  reverse_string.h
src/StringService/: StringReverser.cs  StringService.csproj
src/tests/: run_all_tests.sh
src/tests/BrowserTests/: package-lock.json  package.json  playwright.config.ts  run_browser_tests.sh
src/tests/BrowserTests/tests/: reverse.spec.ts
src/tests/CppLibraryFuzzer/: CMakeLists.txt  run_fuzz_tests.sh
src/tests/CppLibraryTests/: run_fuzz_tests.sh  run_unittests.sh  test_reverse_string.cpp  test_reverse_string_fuzz.cpp
src/tests/CppLibraryUnittests/: CMakeLists.txt  run_unittests.sh  test_reverse_string.cpp
src/tests/DockerSmokeTest/: run_docker_smoke_test.sh
src/tests/StringService.Tests/: StringService.Tests.csproj  StringServiceTests.cs  run_StringServiceTests.sh
src/tests/web-ui.Tests/: ReverseControllerTests.cs  run_tests.sh  web-ui.Tests.csproj
src/web-ui/: Program.cs  ProgramForTests.cs  dotnet_run.sh  web-ui.csproj
src/web-ui/Controllers/: ReverseController.cs
src/web-ui/wwwroot/: index.html
